--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <meta name="author" content="Fli SOFT" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://diveraitrading.web.app/" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
   <link rel="alternate" type="application/pdf" href="https://diveraitrading.web.app/diverai-quant-whitepaper.pdf"
     title="Diver AI Technical White Paper" />
 
