--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     content="Diver AI, AI trading software, stock market prediction, pattern recognition software, algorithmic trading, neural network trading, automated technical analysis, forex trading signals, crypto AI analysis, technical analysis tool, market forecasting" />
   <meta name="author" content="Fli SOFT" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://diveraitrading.web.app/" />
+  <link rel="canonical" href="https://diverai.flisoft.agency/" />
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
-  <link rel="alternate" type="application/pdf" href="https://diveraitrading.web.app/diverai-quant-whitepaper.pdf"
+  <link rel="alternate" type="application/pdf" href="https://diverai.flisoft.agency/diverai-quant-whitepaper.pdf"
     title="Diver AI Technical White Paper" />
 
   <!-- PWA Meta Tags -->
@@ -32,21 +32,21 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://diveraitrading.web.app/" />
+  <meta property="og:url" content="https://diverai.flisoft.agency/" />
   <meta property="og:title" content="Diver AI | AI-Powered Trading & Optical Pattern Recognition Platform" />
   <meta property="og:description"
     content="Diver AI is an AI-powered trading intelligence platform. Read our technical whitepaper on industry-grade pattern recognition." />
-  <meta property="og:image" content="https://diveraitrading.web.app/og-image.png" />
-  <meta property="og:url" content="https://diveraitrading.web.app/" />
+  <meta property="og:image" content="https://diverai.flisoft.agency/og-image.png" />
+  <meta property="og:url" content="https://diverai.flisoft.agency/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://diveraitrading.web.app/" />
+  <meta property="twitter:url" content="https://diverai.flisoft.agency/" />
   <meta property="twitter:title" content="Diver AI | AI-Powered Trading & Optical Pattern Recognition Platform" />
   <meta property="twitter:description"
     content="Diver AI is an AI-powered trading intelligence platform that uses optical pattern recognition to analyze stock and crypto markets and generate high-fidelity predictive insights." />
-  <meta property="twitter:image" content="https://diveraitrading.web.app/og-image.png" />
+  <meta property="twitter:image" content="https://diverai.flisoft.agency/og-image.png" />
 
   <!-- Schema.org for Google -->
   <script type="application/ld+json">
@@ -56,7 +56,7 @@
       "name": "Diver AI",
       "applicationCategory": "FinanceApplication",
       "description": "AI-powered trading platform using optical pattern recognition for stock and crypto market prediction.",
-      "url": "https://diveraitrading.web.app",
+      "url": "https://diverai.flisoft.agency",
       "operatingSystem": "Web",
       "publisher": {
         "@type": "Organization",
