--- a/index.html
+++ b/index.html
@@ -9,73 +9,171 @@
   <meta http-equiv="Content-Security-Policy"
     content="default-src 'self' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com blob:; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' data: https://brrjoheinakfhohesogc.supabase.co https://api.coingecko.com https://tesseract.projectnaptha.com https://cdn.jsdelivr.net https://api.ipify.org https://finnhub.io https://query1.finance.yahoo.com https://corsproxy.io https://api.allorigins.win https://thingproxy.freeboard.io; worker-src 'self' blob: https://cdn.jsdelivr.net https://unpkg.com; object-src 'none'; base-uri 'self'; form-action 'self'; upgrade-insecure-requests; block-all-mixed-content" />
 
+  <!-- Preconnect for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://brrjoheinakfhohesogc.supabase.co" />
+  <link rel="preconnect" href="https://api.coingecko.com" />
+  <link rel="dns-prefetch" href="https://finnhub.io" />
+
   <!-- Primary Meta Tags -->
-  <title>Diver AI | AI-Powered Trading & Optical Pattern Recognition Platform</title>
-  <meta name="title" content="Diver AI | AI-Powered Trading & Optical Pattern Recognition Platform" />
+  <title>Diver AI | AI Stock Analysis & Crypto Trading Signals | Pattern Recognition Tool</title>
+  <meta name="title" content="Diver AI | AI Stock Analysis & Crypto Trading Signals | Pattern Recognition Tool" />
   <meta name="description"
-    content="Diver AI is an institutional-grade AI trading platform. Using Optical Pattern Recognition (OPR), we provide high-fidelity predictive insights for stocks, crypto, and forex." />
+    content="Diver AI uses advanced AI and optical pattern recognition to analyze stocks, crypto, and forex charts. Get real-time trading signals, price predictions, and institutional-grade technical analysis. Free trial available." />
   <meta name="keywords"
-    content="Diver AI, AI trading software, stock market prediction, pattern recognition software, algorithmic trading, neural network trading, automated technical analysis, forex trading signals, crypto AI analysis, technical analysis tool, market forecasting" />
+    content="AI stock analysis, AI trading signals, stock market prediction AI, crypto trading bot, pattern recognition trading, technical analysis AI, algorithmic trading software, AI stock screener, forex signals, automated trading, neural network trading, machine learning stocks, best AI trading platform, stock chart analyzer, crypto price prediction, TradingView alternative, day trading AI, swing trading signals, AI market scanner, stock pattern recognition" />
   <meta name="author" content="Fli SOFT" />
-  <meta name="robots" content="index, follow" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="googlebot" content="index, follow" />
+  <meta name="bingbot" content="index, follow" />
   <link rel="canonical" href="https://diverai.flisoft.agency/" />
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
   <link rel="alternate" type="application/pdf" href="https://diverai.flisoft.agency/diverai-quant-whitepaper.pdf"
     title="Diver AI Technical White Paper" />
+
+  <!-- Language & Geo Targeting -->
+  <meta name="language" content="English" />
+  <meta name="geo.region" content="US" />
+  <meta name="geo.placename" content="United States" />
+  <meta http-equiv="content-language" content="en-US" />
 
   <!-- PWA Meta Tags -->
   <meta name="theme-color" content="#020617" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Diver AI" />
+  <meta name="application-name" content="Diver AI" />
   <link rel="manifest" href="/manifest.webmanifest" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://diverai.flisoft.agency/" />
-  <meta property="og:title" content="Diver AI | AI-Powered Trading & Optical Pattern Recognition Platform" />
+  <meta property="og:site_name" content="Diver AI" />
+  <meta property="og:title" content="Diver AI | AI-Powered Stock & Crypto Analysis Platform" />
   <meta property="og:description"
-    content="Diver AI is an AI-powered trading intelligence platform. Read our technical whitepaper on industry-grade pattern recognition." />
+    content="Get institutional-grade trading signals using AI pattern recognition. Analyze any stock or crypto chart instantly. Try free today." />
   <meta property="og:image" content="https://diverai.flisoft.agency/og-image.png" />
-  <meta property="og:url" content="https://diverai.flisoft.agency/" />
-  <meta property="og:type" content="website" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Diver AI Trading Analysis Dashboard" />
+  <meta property="og:locale" content="en_US" />
 
   <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://diverai.flisoft.agency/" />
-  <meta property="twitter:title" content="Diver AI | AI-Powered Trading & Optical Pattern Recognition Platform" />
-  <meta property="twitter:description"
-    content="Diver AI is an AI-powered trading intelligence platform that uses optical pattern recognition to analyze stock and crypto markets and generate high-fidelity predictive insights." />
-  <meta property="twitter:image" content="https://diverai.flisoft.agency/og-image.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@DiverAI" />
+  <meta name="twitter:creator" content="@FlisoftAgency" />
+  <meta name="twitter:url" content="https://diverai.flisoft.agency/" />
+  <meta name="twitter:title" content="Diver AI | AI Stock Analysis & Pattern Recognition" />
+  <meta name="twitter:description"
+    content="Analyze any stock or crypto chart with AI. Get instant trading signals, price targets, and pattern recognition. Free to start." />
+  <meta name="twitter:image" content="https://diverai.flisoft.agency/og-image.png" />
 
-  <!-- Schema.org for Google -->
+  <!-- Additional Social -->
+  <meta property="article:publisher" content="https://flisoft.agency" />
+
+  <!-- Schema.org - Organization -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Diver AI",
+      "alternateName": "DiverAI",
+      "url": "https://diverai.flisoft.agency",
+      "logo": "https://diverai.flisoft.agency/favicon.png",
+      "sameAs": [
+        "https://twitter.com/DiverAI",
+        "https://chromewebstore.google.com/detail/gjmicgddmbghplbdolnmiecjkdfipand"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "customer service",
+        "url": "https://diverai.flisoft.agency/docs"
+      },
+      "parentOrganization": {
+        "@type": "Organization",
+        "name": "Fli SOFT",
+        "url": "https://flisoft.agency"
+      }
+    }
+  </script>
+
+  <!-- Schema.org - WebSite with SearchAction -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Diver AI",
+      "alternateName": "Diver AI Trading Platform",
+      "url": "https://diverai.flisoft.agency",
+      "description": "AI-powered trading analysis platform using optical pattern recognition for stocks, crypto, and forex.",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://diverai.flisoft.agency/analysis?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+  </script>
+
+  <!-- Schema.org - SoftwareApplication -->
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "SoftwareApplication",
       "name": "Diver AI",
       "applicationCategory": "FinanceApplication",
-      "description": "AI-powered trading platform using optical pattern recognition for stock and crypto market prediction.",
+      "applicationSubCategory": "Trading Analysis",
+      "description": "AI-powered trading platform using optical pattern recognition for stock and crypto market prediction. Analyze any chart with neural networks and get institutional-grade trading signals.",
       "url": "https://diverai.flisoft.agency",
-      "operatingSystem": "Web",
+      "operatingSystem": "Web, Chrome Extension",
+      "browserRequirements": "Requires JavaScript. Works best in Chrome, Firefox, Safari, Edge.",
+      "softwareVersion": "2.4.0",
+      "releaseNotes": "https://diverai.flisoft.agency/updates",
+      "screenshot": "https://diverai.flisoft.agency/og-image.png",
       "publisher": {
         "@type": "Organization",
         "name": "Fli SOFT",
         "url": "https://flisoft.agency"
       },
-      "offers": {
-        "@type": "Offer",
-        "price": "0",
-        "priceCurrency": "USD"
-      },
+      "offers": [
+        {
+          "@type": "Offer",
+          "name": "Free Tier",
+          "price": "0",
+          "priceCurrency": "USD",
+          "description": "3 free scans per day"
+        },
+        {
+          "@type": "Offer",
+          "name": "Pro Monthly",
+          "price": "29.99",
+          "priceCurrency": "USD",
+          "description": "Unlimited scans, priority analysis, 10-year charts"
+        }
+      ],
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.9",
-        "ratingCount": "3200"
+        "ratingCount": "3200",
+        "bestRating": "5",
+        "worstRating": "1"
       },
-      "featureList": "OCR Chart Scanning, Bayesian Probability Fusion, LSTM Neural Predictions, Macro Sentiment Analysis"
+      "featureList": [
+        "OCR Chart Scanning",
+        "Bayesian Probability Fusion",
+        "LSTM Neural Predictions",
+        "Macro Sentiment Analysis",
+        "Real-time Trading Signals",
+        "10-Year Price History",
+        "Chrome Extension",
+        "PDF Report Export"
+      ]
     }
-    </script>
+  </script>
+
+  <!-- Schema.org - FAQPage -->
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -86,7 +184,7 @@
           "name": "How accurate is Diver AI?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Diver AI's Bayesian Engine is backtested with high directional correlation on major stock and crypto assets."
+            "text": "Diver AI's Bayesian Engine is backtested with high directional correlation on major stock and crypto assets. Our optical pattern recognition system identifies chart patterns with institutional-grade precision."
           }
         },
         {
@@ -94,12 +192,104 @@
           "name": "What assets can I analyze with Diver AI?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Diver AI supports all major S&P 500 stocks, high-liquidity crypto pairs, and major Forex pairs."
+            "text": "Diver AI supports all major S&P 500 stocks, high-liquidity crypto pairs (BTC, ETH, SOL, etc.), and major Forex pairs. Simply upload or scan any chart to get instant analysis."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Is Diver AI free to use?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes! Diver AI offers a free tier with 3 scans per day. Pro users get unlimited scans, priority analysis, 10-year historical charts, and advanced features starting at $29.99/month."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How does AI pattern recognition work for trading?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Diver AI uses optical character recognition (OCR) combined with neural networks to scan chart images and identify patterns like head and shoulders, double tops, wedges, and support/resistance levels. The AI then calculates probability scores for potential price movements."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Does Diver AI work with TradingView?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes! The Diver AI Chrome Extension overlays directly on TradingView, Yahoo Finance, CoinGecko, and other popular charting platforms. No need to switch tabs - get AI analysis right where you trade."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What is the Diver AI Chrome Extension?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "The Diver AI Chrome Extension is a free browser add-on that provides instant AI chart analysis on any website. It integrates seamlessly with TradingView, Yahoo Finance, and other platforms to give you trading signals without leaving your workflow."
           }
         }
       ]
     }
-    </script>
+  </script>
+
+  <!-- Schema.org - BreadcrumbList -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://diverai.flisoft.agency/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Analysis Terminal",
+          "item": "https://diverai.flisoft.agency/analysis"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Pricing",
+          "item": "https://diverai.flisoft.agency/pricing"
+        },
+        {
+          "@type": "ListItem",
+          "position": 4,
+          "name": "Documentation",
+          "item": "https://diverai.flisoft.agency/docs"
+        }
+      ]
+    }
+  </script>
+
+  <!-- Schema.org - Product for Chrome Extension -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "Diver AI Chrome Extension",
+      "description": "Free Chrome extension for AI-powered stock and crypto chart analysis. Works on TradingView, Yahoo Finance, and more.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Diver AI"
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock",
+        "url": "https://chromewebstore.google.com/detail/gjmicgddmbghplbdolnmiecjkdfipand"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": "150"
+      }
+    }
+  </script>
 </head>
 
 <body>
