--- a/index.html
+++ b/index.html
@@ -143,14 +143,52 @@
           "name": "Free Tier",
           "price": "0",
           "priceCurrency": "USD",
-          "description": "3 free scans per day"
+          "priceValidUntil": "2026-12-31",
+          "description": "3 free scans per day",
+          "availability": "https://schema.org/InStock"
         },
         {
           "@type": "Offer",
           "name": "Pro Monthly",
           "price": "29.99",
           "priceCurrency": "USD",
-          "description": "Unlimited scans, priority analysis, 10-year charts"
+          "priceValidUntil": "2026-12-31",
+          "description": "Unlimited scans, priority analysis, 10-year charts",
+          "availability": "https://schema.org/InStock",
+          "url": "https://diverai.flisoft.agency/pricing",
+          "shippingDetails": {
+            "@type": "OfferShippingDetails",
+            "shippingRate": {
+              "@type": "MonetaryAmount",
+              "value": "0",
+              "currency": "USD"
+            },
+            "shippingDestination": {
+              "@type": "DefinedRegion",
+              "addressCountry": "US"
+            },
+            "deliveryTime": {
+              "@type": "ShippingDeliveryTime",
+              "handlingTime": {
+                "@type": "QuantitativeValue",
+                "minValue": 0,
+                "maxValue": 0,
+                "unitCode": "DAY"
+              },
+              "transitTime": {
+                "@type": "QuantitativeValue",
+                "minValue": 0,
+                "maxValue": 0,
+                "unitCode": "DAY"
+              }
+            }
+          },
+          "hasMerchantReturnPolicy": {
+            "@type": "MerchantReturnPolicy",
+            "applicableCountry": "US",
+            "returnPolicyCategory": "https://schema.org/MerchantReturnNotPermitted",
+            "merchantReturnLink": "https://diverai.flisoft.agency/docs"
+          }
         }
       ],
       "aggregateRating": {
@@ -281,6 +319,7 @@
         "@type": "Offer",
         "price": "0",
         "priceCurrency": "USD",
+        "priceValidUntil": "2026-12-31",
         "availability": "https://schema.org/InStock",
         "url": "https://chromewebstore.google.com/detail/gjmicgddmbghplbdolnmiecjkdfipand",
         "shippingDetails": {
@@ -313,7 +352,7 @@
         "hasMerchantReturnPolicy": {
           "@type": "MerchantReturnPolicy",
           "applicableCountry": "US",
-          "returnPolicyCategory": "https://schema.org/NoReturns",
+          "returnPolicyCategory": "https://schema.org/MerchantReturnNotPermitted",
           "merchantReturnLink": "https://diverai.flisoft.agency/docs"
         }
       },
