--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <title>Diver AI | AI Stock Analysis & Crypto Trading Signals</title>
+  <link rel="icon" type="image/png" sizes="16x16" href="/icon-16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+  <link rel="icon" type="image/png" sizes="48x48" href="/icon-48.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google" content="notranslate" />
   <meta http-equiv="Content-Security-Policy"
@@ -78,7 +81,7 @@
       "name": "Diver AI",
       "alternateName": "DiverAI",
       "url": "https://diverai.flisoft.agency",
-      "logo": "https://diverai.flisoft.agency/favicon.png",
+      "logo": "https://diverai.flisoft.agency/pwa-192x192-v2.png",
       "sameAs": [
         "https://twitter.com/DiverAI",
         "https://chromewebstore.google.com/detail/gjmicgddmbghplbdolnmiecjkdfipand"
