I have successfully implemented the Google Tag (gtag.js)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NJ190Y7ZMH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-NJ190Y7ZMH');
+  </script>
   <title>Diver AI | AI Stock Analysis & Crypto Trading Signals</title>
   <link rel="icon" type="image/png" sizes="16x16" href="/icon-16.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
@@ -10,7 +19,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google" content="notranslate" />
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com blob:; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; media-src 'self' data: https:; connect-src 'self' data: https://brrjoheinakfhohesogc.supabase.co https://api.coingecko.com https://tesseract.projectnaptha.com https://cdn.jsdelivr.net https://api.ipify.org https://finnhub.io https://query1.finance.yahoo.com https://corsproxy.io https://api.allorigins.win https://thingproxy.freeboard.io; worker-src 'self' blob: https://cdn.jsdelivr.net https://unpkg.com; object-src 'none'; base-uri 'self'; form-action 'self'; upgrade-insecure-requests; block-all-mixed-content" />
+    content="default-src 'self' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com blob:; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; media-src 'self' data: https:; connect-src 'self' data: https://brrjoheinakfhohesogc.supabase.co https://api.coingecko.com https://tesseract.projectnaptha.com https://cdn.jsdelivr.net https://api.ipify.org https://finnhub.io https://query1.finance.yahoo.com https://corsproxy.io https://api.allorigins.win https://thingproxy.freeboard.io https://www.google-analytics.com https://*.google-analytics.com; worker-src 'self' blob: https://cdn.jsdelivr.net https://unpkg.com; object-src 'none'; base-uri 'self'; form-action 'self'; upgrade-insecure-requests; block-all-mixed-content" />
 
   <!-- Preconnect for Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
